app/static/css/custom.css
/* ... */
/* Alerts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.flash {
    border: 1px solid;
    /* border-radius: 4px; */
    display: block;
    padding: 15px;
    margin-bottom: 20px;
    animation: slide-down 0.3s cubic-bezier(.22,.61,.36,1) forwards;
    border-color: #e5e5e5;
    color: #524535;
}
.label,
.help-block {
    display: inline;
    padding: 0.2em 0.6em 0.3em;
    font-size: 75%;
    font-weight: 300;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
}
.primary {
    background-color: #3299bb;
    border-color: #3299bb;
}
.success,
.good {
    color: #fff;
    background-color: #274D28;
    border-color: #274D28;
}
.warning,
.unknown {
    color: #fff;
    background-color: #604b29;
    border-color: #604b29;   
}
.danger,
.bad,
.error {
    color: #fff;
    background-color: #652A28;
    border-color: #652A28;
}


/* Images
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.img-circle {
    border-radius: 50%; 
} 
.avatar-sm {
    border-radius: 33%;
    display:inline-block;
    vertical-align: middle;
    width:32px; 
    height:32px; 
    background-color:#ccc; 
    color: #fff;
    font-weight: 600;
    text-align: center;
    line-height: 2.1em;
    text-decoration: none;
    font-size: 1.6rem;
    margin-bottom: 0.3em;
    transition-duration: 0.1s;
    transition-property: border-radius;
    -webkit-transition-duration: 0.1s;
    -webkit-transition-property: border-radius;
}
.avatar-sm:hover {
    text-decoration: none;
    color: #fff;
    border-radius: 0;
}
.see-all {
    display: block;
    text-align: right;
}
.icon {
    width: 1em;
    height: 1em;
    vertical-align: middle;
}
.icon-social {
    width:2em;
    height:2em;
}
.icon-demand {
    height: 32px;
    margin-top: 7px;
}
.icon-comment {
    height: 16px;
    margin-top: 12px;
    margin-right: 14px;
}

    
/* General Layout 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
h2 span,
h3 span{
    font-size: 50%;
}

.full-width-container {
    padding: 0 2rem;
}
@media (min-width: 750px) {
    .full-width-container {
        padding: 0 9rem;
    }
}

.progress {
    display: block;
    height: 6.5rem;
    border-bottom: 2px solid #33C3F0;
    transition: width 0.5s ease-out;
}
.content {
    min-height: 65%;
}
.section {
    padding: 8rem 0 7rem;
    text-align: center;
}
.section-heading,
.section-description {
    margin-bottom: 1.2rem;
}

/* Header 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.header {
    display: block;
    position: fixed;
    top: 0px;
    z-index: 100;
    width: 100%;
    height: 6.5rem;
    background: #fbfaf9;
    border-bottom: 1px solid #ff9900;
}
.header .logo {
    width: 5rem;
    height: 5rem;
    margin: 0.7rem 1rem 0 0;
}
.header .button {
    margin-top: 1.5rem;
}
.header .title {
    margin-top: 1.6rem;
}
@media (min-width: 550px) {
    .header .title {
        margin-top: 1.2rem;
    }
}
.header .user {
    margin: 1.3em 1em 0 0;
    float: right;
}
.header .user a {
    font-weight: bold;
    text-decoration: none;
}

/* Hero Section 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.hero {
    background-size: cover;
}
.hero-heading, 
.hero-content {
    font-weight: 600;
    margin: 1rem 2rem 2rem 2rem;
}
.hero-button {
    margin: 0 2rem 4rem 2rem;
}
.hero-aside {
    margin-top: -5px;
    line-height: 1.4em;
}
.glass {
    position: relative;
    background-color: #fff;
    z-index: 0;
    overflow: hidden;
    display: inline-block;
    box-shadow: 0 0 10px #000;
    max-width: 900px;
}
.glass::before {
    width: 100%;
    height: 100%;
    margin-left: -50%;
    overflow: hidden;
    z-index: -1;
    display: inline-block;
    position: absolute;
    content: ' ';
    -webkit-filter: url('#blur');
    -webkit-filter: blur(5px);
    filter: url('#blur');
    filter: blur(5px);
    opacity: 0.5;
}
.glass span {
    font-style: italic;
    display: block;
    margin: -1.5em 0 1em 0;
}
@media (min-width: 550px) {
    .hero {
        padding-bottom: 12rem;
        text-align: left;
        height: 166px;
    }
    .hero-heading {
        font-size: 2.4rem;
    }
    .hero-content {
        font-size: 1.5rem;
    }
    .glass::before {
        margin-left: 0;
    }
    .glass span {
        display: inline-block;
        margin: 0;
        max-width: 270px;
        vertical-align: middle;
    }
}
@media (min-width: 750px) {
    .hero {
        height: 190px;
    }
    .hero-heading {
        font-weight: 300;
        font-size: 4.0rem;
    }
    .hero-content {
        font-size: 2.0rem;
    }
    .hero-button {
        font-size: 2rem;
        line-height: 4.7rem;
        height: 5rem;
    }
    .section-description {
        max-width: 60%;
        margin-left: auto;
        margin-right: auto;
    }
}
@media (min-width: 1200px) {
    .hero-heading {
        font-size: 5.0rem;
    }
}

/* Feed 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.feed .feed-item {
    display: block;
}

/* Support Actions 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a.support-action {
    text-decoration: none;
}
.support-action {
    display: block;
    border: 1px solid #bbb;
    border-radius: 4px;
    border-color: #3299bb;
    background-color: #fbfaf9;
    padding: 0.5em 1em;
    margin-top: 1em;
}
.support-action:hover {
    border-color: #1eaeda;
    background-color: #fff;
    cursor: pointer;
}
.support-action:hover h5 {
    text-decoration: underline;
}
.support-action article,
.support-action-counter {
    color: #161310;
}
.support-action-details-btn {
    color: #3399bb;
}
.support-action-details-btn:hover {
    color: #1eaeda;
    text-decoration: underline;
}

/* Posts 
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.post {
    -moz-box-shadow: 0 0 10px #e5e5e5;
    -webkit-box-shadow: 0 0 10px #e5e5e5;
    box-shadow: 0 0 10px #e5e5e5;
    padding: 1em;
    margin-top: 2em;
}
/* ... */

